--- a/final_pjt/movies/templates/movies/index.html
+++ b/final_pjt/movies/templates/movies/index.html
@@ -10,16 +10,16 @@
   <a href="{% url 'movies:movie_create' %}" class="btn btn-primary float-right mx-1">영화목록추가</a>
   {% endif %}
 </div>
-
-<hr>
+<br>
 
 <div class="row bg-secondary">
   {% for movie in page_obj %}
   <div class="col-sm-4 col-md-4">
+    <br>
     <div class="card mb-4 pr-2 border border-warning" style="width: 18rem; height: 50rem;">
       <img src="https://image.tmdb.org/t/p/w780/{{ movie.poster_path }}" class="d-flex justify-content-center card-img-top border border-dark" alt="...">
       <div class="card-body">
-        <h3 class="card-title">{{ movie.title }}</h3>
+        <a href="{% url 'movies:detail' movie.pk %}" class="card-title">{{ movie.title }}</a>
         <p class="card-text">{{ movie.overview|truncatewords:10 }}</p>
       </div>
       <ul class="list-group list-group-flush">
