--- a/final_pjt/movies/templates/movies/index.html
+++ b/final_pjt/movies/templates/movies/index.html
@@ -30,6 +30,7 @@
         <li class="list-group-item">개봉일: {{ movie.release_date }}</li>
         <li class="list-group-item">인기도: {{ movie.popularity }}</li>
         <li class="list-group-item">평점: {{ movie.vote_average }}</li>
+        <li class="list-group-item">문제의장르: {{ movie.genre_ids }}</li>
       </ul>
       <div class="card-body">
         <a href="#" class="card-link">Card link</a>
