--- a/final_pjt/accounts/templates/accounts/profile.html
+++ b/final_pjt/accounts/templates/accounts/profile.html
@@ -1,42 +1,55 @@
 {% extends 'base.html' %}
-
 {% block content %}
-<h1>{{ person.username }}의 프로필</h1>
-{% with followings=person.followings.all followers=person.followers.all %}
-<p>팔로잉 : {{ followings|length }}</p>
-<p>팔로워 : {{ followers|length }}</p>
-<hr>
-{% endwith %}
+<br>
+<div class="d-flex justify-content-center text-white">
+  <h1>Welcome to {{ person.username }}'s Theater</h1>
+</div>
+<div class="d-flex justify-content-center">
+  <img class="bg-warning mr-2 mt-1" src="https://i.ytimg.com/vi/MPV2METPeJU/maxresdefault.jpg" style="width: 250px; height: 250px; border-radius: 50%;" alt="" id="">
+  <div class="row text-white" style="margin-top: 15%;">
+    {% with followings=person.followings.all followers=person.followers.all %}
+    <div class="col-6 text-center" style="font-size: medium; font-weight: 600;" id="follow">
+      <p>following</p>
+      <p>{{ followings|length }}</p>
+    </div>
+    <div class="col-6 text-center" style="font-size: medium; font-weight: 600;" id="follow">
+      <p>follower</p>
+      <p>{{ followings|length }}</p>
+    </div>
+    {% endwith %}
+  </div>
+  <img class="bg-warning ml-2 mt-1" src="https://i.ytimg.com/vi/MPV2METPeJU/maxresdefault.jpg" style="width: 250px; height: 250px; border-radius: 50%;" alt="" id="">
+
+</div>
 
 {% if user != person %}
-    {% if user in person.followers %}
+    {% if user in person.followers.all %}
         <a href="{% url 'accounts:follow' person.username %}">언팔로우</a>
     {% else %}
         <a href="{% url 'accounts:follow' person.username %}">팔로우</a>
     {% endif %}
 {% endif %}
 
-<hr>
+<br>
 
-<h3>내가 좋아요 한 영화 목록</h3>
-<table class="table table-striped text-center">
-  <thead>
-    <tr class="">
-      <th scope="col">Numer</th>
-      <th scope="col">Title</th>
-      <th scope="col">Content</th>
-    </tr>
-  </thead>
-{% for movie in movies %}
-  <tbody>
-    <tr>
-    <th scope="row">{{ forloop.counter }}</th>
-    <td>{{ movie.title }}</a></td>
-    <td><img src="https://image.tmdb.org/t/p/w780/{{ movie.poster_path }}" alt="poster" style="width:auto; height: 300px;"></td>
-    </tr>
-{% endfor %}
-  </tbody>
-</table>
+<h3>{{ user.username }}님의 영화목록</h3>
+
+<div class="row d-flex justify-content-around"id="second">
+  {% for movie in movies %}
+  <div class="card col-2 ml-2 mr-2 mb-4 pr-1 pl-1 " style="" id="cards">
+    <img src="https://image.tmdb.org/t/p/w780/{{ movie.poster_path }}" class=" card-img-top " id="card_img">
+
+    <div class="card-body text-center" style="height: 50%; width: 100%; font-size: large; font-weight: 600;">
+      <a href="{% url 'movies:detail' movie.pk %}" class="card-title d-flex justify-content-center text-center text-dark" style="font-size: x-large; font-weight: 700;">{{ movie.original_title }}</a>
+      
+      <a href="{% url 'movies:detail' movie.pk %}" class="d-flex justify-content-center"><button>영화정보 더보기</button></a>
+      
+    
+    </div>
+      
+  </div>  
+  {% endfor %}
+</div>
 {% endblock %}
 
 
